--- a/resources/language/Portuguese/strings.po
+++ b/resources/language/Portuguese/strings.po
@@ -53,7 +53,7 @@ msgid "Architecture: "
 msgstr "Arquitectura:"
 
 msgctxt "#609"
-msgid "Open Embedded Linux Entertainment Center (OpenELEC) is a minimal Linux distribution purpose built for XBMC media center. OpenELEC is designed to boot fast with an installation process simple enough for anyone to convert a bare HTPC into a fully configuredd media machine in under 15 minutes."
+msgid "Open Embedded Linux Entertainment Center (OpenELEC) is a minimal Linux distribution purpose built for XBMC media center. OpenELEC is designed to boot fast with an installation process simple enough for anyone to convert a bare HTPC into a fully configured media machine in under 15 minutes."
 msgstr "O Open Embedded Linux Entertainment Center (OpenELEC) é uma distribuição Linux minimalista construída à medida do centro de média XBMC. Tem uma iniciação rápida e um processo de instalação simples para que qualquer pessoa consiga transformar um HTPC em bruto num sistema de média totalmente configurado, em menos de 15 minutos."
 
 msgctxt "#610"
@@ -161,12 +161,12 @@ msgid "Restore a tar archive backup previously created using the backup option a
 msgstr "Restaurar um ficheiro tar de cópia de segurança criado previamente com a opção em cima"
 
 msgctxt "#724"
-msgid "Permanently reset OpenELEC OS configuration to defaults (XBMC is not touched)"
-msgstr "Reiniciar permanentemente a configuração do OpenELEC para os valores padrão (o XBMC não será afectado)"
+msgid "[COLOR FF00FF00]SOFT RESET[/COLOR]\nPermanently reset OpenELEC OS configuration to defaults (resets also XBMC to default including your library. your media - music/videos/etc are not touched)"
+msgstr "[COLOR FF00FF00]SOFT RESET[/COLOR]\nRepor permanentemente as configurações do sistema OpenELEC para valores padrão (repõe também os valores do XBMC para padrão, incluindo a sua biblioteca - música/vídeos/etc não são modificados)"
 
 msgctxt "#725"
-msgid "Permanently reset OpenELEC OS and XBMC configuration to defaults"
-msgstr "Reiniciar permanentemente a configuração do OpenELEC e do XBMC para os valores padrão"
+msgid "[COLOR FFFF0000]HARD RESET[/COLOR]\nPermanently reset OpenELEC OS and XBMC configuration to defaults (everything in your storage partition will be deleted)"
+msgstr "[COLOR FFFF0000]HARD RESET[/COLOR]\nRepor permanentemente as configurações do sistema OpenELEC e do XBMC para valores padrão (todo o conteúdo da sua partição de armazenamento será apagado)"
 
 msgctxt "#726"
 msgid "Enable or disable support for Wireless (WLAN) networks"
@@ -267,6 +267,22 @@ msgstr "749"
 msgctxt "#750"
 msgid "750"
 msgstr "750"
+
+msgctxt "#751"
+msgid "With OBEX filetransfer you can send files, for example movies or pictures over bluetooth to OpenELEC."
+msgstr "Com a transferência de ficheiros OBEX pode enviar ficheiros, como por exemplo filmes ou imagens, através de bluetooth para o OpenELEC."
+
+msgctxt "#752"
+msgid "Here you can set the folder location where OBEX file transfer should store incoming files"
+msgstr "Aqui pode definir a localização da pasta onde as transferências de ficheiros OBEX serão guardadas."
+
+msgctxt "#753"
+msgid "Configure the 1st keyboard software Variant"
+msgstr "Definir a Variante de software do 1º teclado"
+
+msgctxt "#754"
+msgid "Configure the 2nd keyboard software Variant"
+msgstr "Definir a Variante de software do 2º teclado"
 
 msgctxt "#32000"
 msgid "Network"
@@ -964,6 +980,10 @@ msgctxt "#32343"
 msgid "Enter the following Key on your Device."
 msgstr "Introduza a seguinte Chave no seu Dispositivo."
 
+msgctxt "#32344"
+msgid "Enable Bluetooth"
+msgstr "Activar Bluetooth"
+
 msgctxt "#32345"
 msgid "Bluetooth daemon is not running!"
 msgstr "O daemon de Bluetooth não está activo!"
@@ -1103,3 +1123,43 @@ msgstr "Não existe suficiente espaço de armazenamento livre para continuar!"
 msgctxt "#32380"
 msgid "Restoring system settings requires a reboot. Are you sure you want to restore?"
 msgstr "É necessário reiniciar o dispositivo para restaurar definições de sistema. Tem a certeza que quer restaurar?"
+
+msgctxt "#32381"
+msgid "Accept incoming Bluetooth Filetransfer ?"
+msgstr "Aceitar transferência de ficheiros Bluetooth recebida?"
+
+msgctxt "#32382"
+msgid "Speed"
+msgstr "Velocidade"
+
+msgctxt "#32383"
+msgid "Play Files ?"
+msgstr "Reproduzir Ficheiros ?"
+
+msgctxt "#32384"
+msgid "OBEX Enabled"
+msgstr "OBEX Activado"
+
+msgctxt "#32385"
+msgid "OBEX Upload Folder"
+msgstr "Pasta de Envios OBEX"
+
+msgctxt "#32386"
+msgid "Keyboard Layout Variant #1"
+msgstr "Variante #1 da Disposição do Teclado"
+
+msgctxt "#32387"
+msgid "Keyboard Layout Variant #2"
+msgstr "Variante #2 da Disposição do Teclado"
+
+msgctxt "#32388"
+msgid "Enable Standby"
+msgstr "Activar Modo Suspenso"
+
+msgctxt "#32389"
+msgid "Disable Standby"
+msgstr "Desactivar Modo Suspenso"
+
+msgctxt "#32390"
+msgid "Settings addon is not yet ready, please try again later."
+msgstr "O addon de definições ainda não está disponível, por favor tente mais tarde."
