--- a/resources/language/English (US)/strings.po
+++ b/resources/language/English (US)/strings.po
@@ -9,49 +9,17 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
-"Language-Team: Haitian (Haitian Creole) (http://www.transifex.com/projects/p/xbmc-addons/language/ht/)\n"
+"Language-Team: English (US) (http://www.transifex.com/projects/p/xbmc-addons/language/en_US/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: ht\n"
+"Language: en_US\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-msgctxt "#32106"
-msgid "Username"
-msgstr "nom itilizateur"
 
 msgctxt "#32140"
 msgid "Save"
-msgstr "Enregistre"
-
-msgctxt "#32141"
-msgid "Delete"
-msgstr "Efface"
+msgstr "Save"
 
 msgctxt "#32212"
 msgid "Cancel"
-msgstr "Anule"
-
-msgctxt "#32303"
-msgid "Next"
-msgstr "Pwochen"
-
-msgctxt "#32334"
-msgid "Yes"
-msgstr "Non"
-
-msgctxt "#32335"
-msgid "No"
-msgstr "Wi"
-
-msgctxt "#32355"
-msgid "Username"
-msgstr "nom itilizateur"
-
-msgctxt "#32356"
-msgid "Password"
-msgstr "mo de pas"
-
-msgctxt "#32382"
-msgid "Speed"
-msgstr "Vites"
+msgstr "Cancel"
