--- a/resources/language/Finnish/strings.po
+++ b/resources/language/Finnish/strings.po
@@ -52,10 +52,6 @@ msgctxt "#608"
 msgid "Architecture: "
 msgstr "Arkkitehtuuri:"
 
-msgctxt "#609"
-msgid "Open Embedded Linux Entertainment Center (OpenELEC) is a minimal Linux distribution purpose built for XBMC media center. OpenELEC is designed to boot fast with an installation process simple enough for anyone to convert a bare HTPC into a fully configuredd media machine in under 15 minutes."
-msgstr "Open Embedded Linux Entertainment Center (OpenELEC) on Linux -jakelu joka on suunnattu XBMC mediakoneille. OpenELEC on tehty käynnistymään nopeasti ja sen asennus on niin helppoa, että kuka tahansa saa muunnettua HTPC:nsä täysiveriseksi mediakoneeksi alle 15 minuutissa."
-
 msgctxt "#610"
 msgid "[B]Support:[/B][CR]Web: http://openelec.tv[CR]Forum: http://openelec.tv/forum[CR]Wiki: http://wiki.openelec.tv[CR][CR][B]Social Media:[/B][CR]IRC: #openelec on freenode.net (web-based chat is also available from the website)[CR]Twitter: https://twitter.com/openelec[CR]Facebook: http://www.facebook.com/OpenELEC[CR]Google+: https://plus.google.com/+openelec"
 msgstr "[B]Tuki:[/B][CR]Internet: http://openelec.tv[CR]Foorumi: http://openelec.tv/forum[CR]Wiki: http://wiki.openelec.tv[CR][CR][B]Sosiaalinen media:[/B][CR]IRC: #openelec freenode.net:ssä (web-pohjainen chat löytyy myös nettisivuilta)[CR]Twitter: https://twitter.com/openelec[CR]Facebook: http://www.facebook.com/OpenELEC[CR]Google+: https://plus.google.com/+openelec"
@@ -160,14 +156,6 @@ msgctxt "#723"
 msgid "Restore a tar archive backup previously created using the backup option above"
 msgstr "Palauta varmuuskopio tar -paketista käyttäen yllä olevaa varmuuskopio -vaihtoehtoa"
 
-msgctxt "#724"
-msgid "Permanently reset OpenELEC OS configuration to defaults (XBMC is not touched)"
-msgstr "Palauta alkuperäiset OpenELEC -käyttöjärjestelmätason asetukset. (XBMC -asetuksia ei palauteta)."
-
-msgctxt "#725"
-msgid "Permanently reset OpenELEC OS and XBMC configuration to defaults"
-msgstr "Palauta alkuperäiset OpenELEC ja XBMC -asetukset"
-
 msgctxt "#726"
 msgid "Enable or disable support for Wireless (WLAN) networks"
 msgstr "Valitse käytetäänkö langattomia verkkoja (WLAN)"
@@ -267,6 +255,14 @@ msgstr "749"
 msgctxt "#750"
 msgid "750"
 msgstr "750"
+
+msgctxt "#751"
+msgid "With OBEX filetransfer you can send files, for example movies or pictures over bluetooth to OpenELEC."
+msgstr "OBEX-tiedostonsiirrolla voi lähettää tiedostoja OpenELECiin bluetoothilla, esimerkiksi elokuvia tai valokuvia."
+
+msgctxt "#752"
+msgid "Here you can set the folder location where OBEX file transfer should store incoming files"
+msgstr "Tässä voi määrittää hakemiston, johon OBEX-tiedostonsiirto tallettaa siirretyt tiedostot"
 
 msgctxt "#32000"
 msgid "Network"
@@ -964,6 +960,10 @@ msgctxt "#32343"
 msgid "Enter the following Key on your Device."
 msgstr "Syötä seuraava koodi laiteeseesi"
 
+msgctxt "#32344"
+msgid "Enable Bluetooth"
+msgstr "Ota Bluetooth käyttöön"
+
 msgctxt "#32345"
 msgid "Bluetooth daemon is not running!"
 msgstr "Bluetooth palvelu ei ole käynnissä!"
@@ -1103,3 +1103,23 @@ msgstr "Vapauta levytilaa jatkaaksesi!"
 msgctxt "#32380"
 msgid "Restoring system settings requires a reboot. Are you sure you want to restore?"
 msgstr "Järjestelmän palautus vaatii uudelleenkäynnistyksen. Haluatko varmasti jatkaa?"
+
+msgctxt "#32381"
+msgid "Accept incoming Bluetooth Filetransfer ?"
+msgstr "Ota vastaan tiedosto Bluetoohtilla?"
+
+msgctxt "#32382"
+msgid "Speed"
+msgstr "Nopeus"
+
+msgctxt "#32383"
+msgid "Play Files ?"
+msgstr "Toista tiedostot?"
+
+msgctxt "#32384"
+msgid "OBEX Enabled"
+msgstr "OBEX-tiedostonsiirto käytössä"
+
+msgctxt "#32385"
+msgid "OBEX Upload Folder"
+msgstr "OBEX -tiedostonsiirtokansio"
