--- a/resources/language/French/strings.po
+++ b/resources/language/French/strings.po
@@ -53,8 +53,8 @@ msgid "Architecture: "
 msgstr "Architecture:"
 
 msgctxt "#609"
-msgid "Open Embedded Linux Entertainment Center (OpenELEC) is a minimal Linux distribution purpose built for XBMC media center. OpenELEC is designed to boot fast with an installation process simple enough for anyone to convert a bare HTPC into a fully configuredd media machine in under 15 minutes."
-msgstr "Open Embedded Linux Entertainment Center (OpenELEC) est un système Linux minimal construit pour XBMC. OpenELEC a été pensé pour démarrer rapidement et son processus d'installation est suffisament simple pour que n'importe qui puisse convertir un ordinateur en machine multimédia en moins de 15 minutes."
+msgid "Open Embedded Linux Entertainment Center (OpenELEC) is a minimal Linux distribution purpose built for XBMC media center. OpenELEC is designed to boot fast with an installation process simple enough for anyone to convert a bare HTPC into a fully configured media machine in under 15 minutes."
+msgstr "Open Embedded Linux Entertainment Center (OpenELEC) est un système Linux minimal construit pour XBMC. OpenELEC a été pensé pour démarrer rapidement avec un processus d'installation suffisament simple pour que n'importe qui puisse convertir un ordinateur en machine multimédia en moins de 15 minutes."
 
 msgctxt "#610"
 msgid "[B]Support:[/B][CR]Web: http://openelec.tv[CR]Forum: http://openelec.tv/forum[CR]Wiki: http://wiki.openelec.tv[CR][CR][B]Social Media:[/B][CR]IRC: #openelec on freenode.net (web-based chat is also available from the website)[CR]Twitter: https://twitter.com/openelec[CR]Facebook: http://www.facebook.com/OpenELEC[CR]Google+: https://plus.google.com/+openelec"
@@ -62,7 +62,7 @@ msgstr "[B]Support:[/B][CR]Web: http://openelec.tv[CR]Forum: http://openelec.tv/
 
 msgctxt "#611"
 msgid "The OpenELEC project runs on goodwill, love, and your donations. If you would like to contribute to the project you can donate using PayPal, Flattr or Bitcoin. Making a donation is easy and takes only a couple of minutes. http://openelec.tv/donate"
-msgstr "Le projet OpenELEC s’appuie sur la bonne volonté, l'amour, et vos dons. Pour contribuer au projet, vous pouvez faire des dons via PayPal, Flattr ou Bitcoin. Faire un don est simple et ne prend que quelques minutes. http://openelec.tv/donate"
+msgstr "Le projet OpenELEC s’appuie sur la bonne volonté, l'amour, et vos dons. Vous pouvez contribuer au projet via PayPal, Flattr ou Bitcoin. Faire un don est simple et ne prend que quelques minutes. http://openelec.tv/donate"
 
 msgctxt "#700"
 msgid "Configure a hostname, keyboard type, perform a reset, update, or backups and restores"
@@ -161,12 +161,12 @@ msgid "Restore a tar archive backup previously created using the backup option a
 msgstr "Restaurer une archive tar précédemment créée en utilisant l'option de sauvegarde"
 
 msgctxt "#724"
-msgid "Permanently reset OpenELEC OS configuration to defaults (XBMC is not touched)"
-msgstr "Restaurer la configuration par défaut du système OpenELEC (ne s'applique pas à XBMC)"
+msgid "[COLOR FF00FF00]SOFT RESET[/COLOR]\nPermanently reset OpenELEC OS configuration to defaults (resets also XBMC to default including your library. your media - music/videos/etc are not touched)"
+msgstr "[COLOR FF00FF00]RAZ LEGER[/COLOR]⏎\nRestaure les paramètres par défaut de configuration d'OpenELEC SE (restaure aussi les paramètres par défaut d'XBMC incluant vos bibliothèques. Vos médias - musique/vidéos/etc ne sont pas touchées)"
 
 msgctxt "#725"
-msgid "Permanently reset OpenELEC OS and XBMC configuration to defaults"
-msgstr "Restaurer les configurations par défaut du système OpenELEC et d'XBMC"
+msgid "[COLOR FFFF0000]HARD RESET[/COLOR]\nPermanently reset OpenELEC OS and XBMC configuration to defaults (everything in your storage partition will be deleted)"
+msgstr "[COLOR FFFF0000]RAZ LOURD[/COLOR]⏎\nRestauration de la configuration par défaut d'OpenELEC SE et d'XBMC (toutes les données dans votre espace de stockage seront perdues)"
 
 msgctxt "#726"
 msgid "Enable or disable support for Wireless (WLAN) networks"
@@ -267,6 +267,22 @@ msgstr "749"
 msgctxt "#750"
 msgid "750"
 msgstr "750"
+
+msgctxt "#751"
+msgid "With OBEX filetransfer you can send files, for example movies or pictures over bluetooth to OpenELEC."
+msgstr "Vous pouvez envoyer des fichiers en Bluetooth à OpenELEC avec le système OBEX, comme des films ou des images."
+
+msgctxt "#752"
+msgid "Here you can set the folder location where OBEX file transfer should store incoming files"
+msgstr "Rentrez ici le répertoire où OBEX doit enregistrer les fichiers arrivants"
+
+msgctxt "#753"
+msgid "Configure the 1st keyboard software Variant"
+msgstr "Configurer la variante du 1er type de clavier"
+
+msgctxt "#754"
+msgid "Configure the 2nd keyboard software Variant"
+msgstr "Configurer la variante du 2ème type de clavier"
 
 msgctxt "#32000"
 msgid "Network"
@@ -964,6 +980,10 @@ msgctxt "#32343"
 msgid "Enter the following Key on your Device."
 msgstr "Saisissez la clé suivante sur votre périphérique."
 
+msgctxt "#32344"
+msgid "Enable Bluetooth"
+msgstr "Activer le Bluetooth"
+
 msgctxt "#32345"
 msgid "Bluetooth daemon is not running!"
 msgstr "Le démon Bluetooth n'est pas démarré!"
@@ -1103,3 +1123,43 @@ msgstr "L'espace disque disponible est insuffisant pour continuer!"
 msgctxt "#32380"
 msgid "Restoring system settings requires a reboot. Are you sure you want to restore?"
 msgstr "Restaurer les paramètres système requiert un redémarrage. Êtes-vous sûr de vouloir restaurer?"
+
+msgctxt "#32381"
+msgid "Accept incoming Bluetooth Filetransfer ?"
+msgstr "Accepter le transfert Bluetooth entrant ?"
+
+msgctxt "#32382"
+msgid "Speed"
+msgstr "Vitesse"
+
+msgctxt "#32383"
+msgid "Play Files ?"
+msgstr "Jouer les fichiers ?"
+
+msgctxt "#32384"
+msgid "OBEX Enabled"
+msgstr "OBEX activé"
+
+msgctxt "#32385"
+msgid "OBEX Upload Folder"
+msgstr "Répertoire d'envoi OBEX"
+
+msgctxt "#32386"
+msgid "Keyboard Layout Variant #1"
+msgstr "Variante N°1 du clavier"
+
+msgctxt "#32387"
+msgid "Keyboard Layout Variant #2"
+msgstr "Variante N°2 du clavier"
+
+msgctxt "#32388"
+msgid "Enable Standby"
+msgstr "Activer la mise en veille"
+
+msgctxt "#32389"
+msgid "Disable Standby"
+msgstr "Désactiver la mise en veille"
+
+msgctxt "#32390"
+msgid "Settings addon is not yet ready, please try again later."
+msgstr "L'extension Réglages n'est pas encore prête, merci de réessayer plus tard."
