--- a/resources/language/Georgian/strings.po
+++ b/resources/language/Georgian/strings.po
@@ -9,49 +9,25 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
-"Language-Team: Haitian (Haitian Creole) (http://www.transifex.com/projects/p/xbmc-addons/language/ht/)\n"
+"Language-Team: Georgian (http://www.transifex.com/projects/p/xbmc-addons/language/ka/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: ht\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: ka\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 msgctxt "#32106"
 msgid "Username"
-msgstr "nom itilizateur"
+msgstr "მომხმარებელი"
 
-msgctxt "#32140"
-msgid "Save"
-msgstr "Enregistre"
-
-msgctxt "#32141"
-msgid "Delete"
-msgstr "Efface"
-
-msgctxt "#32212"
-msgid "Cancel"
-msgstr "Anule"
-
-msgctxt "#32303"
-msgid "Next"
-msgstr "Pwochen"
-
-msgctxt "#32334"
-msgid "Yes"
-msgstr "Non"
-
-msgctxt "#32335"
-msgid "No"
-msgstr "Wi"
+msgctxt "#32110"
+msgid "Connection"
+msgstr "შეერთება"
 
 msgctxt "#32355"
 msgid "Username"
-msgstr "nom itilizateur"
+msgstr "მომხმარებელი"
 
 msgctxt "#32356"
 msgid "Password"
-msgstr "mo de pas"
-
-msgctxt "#32382"
-msgid "Speed"
-msgstr "Vites"
+msgstr "პაროლი"
