--- a/resources/language/Portuguese (Brazil)/strings.po
+++ b/resources/language/Portuguese (Brazil)/strings.po
@@ -168,6 +168,10 @@ msgctxt "#32007"
 msgid "Driver"
 msgstr "Driver"
 
+msgctxt "#32008"
+msgid "LCD/VFD Driver"
+msgstr "Driver LCD/VFD "
+
 msgctxt "#32009"
 msgid "Keyboard"
 msgstr "Teclado"
@@ -395,6 +399,14 @@ msgstr "Desabilitar Compressão BSD"
 msgctxt "#32161"
 msgid "Disable VJ Compression"
 msgstr "Desabukutar Compressão Vj"
+
+msgctxt "#32165"
+msgid "MTU"
+msgstr "MTU"
+
+msgctxt "#32166"
+msgid "NSCertType"
+msgstr "NSCertType"
 
 msgctxt "#32168"
 msgid "Port"
@@ -648,6 +660,10 @@ msgctxt "#32335"
 msgid "No"
 msgstr "Não"
 
+msgctxt "#32344"
+msgid "Enable Bluetooth"
+msgstr "Ativar Bluetooth"
+
 msgctxt "#32346"
 msgid "Bluetooth is disabled"
 msgstr "Bluetooth está desabilitado"
@@ -739,3 +755,15 @@ msgstr "Não há espaço suficiente para continuar!"
 msgctxt "#32380"
 msgid "Restoring system settings requires a reboot. Are you sure you want to restore?"
 msgstr "Restaurar configurações de sistema requer uma reinicialização. Tem certeza que gostaria de restaurar?"
+
+msgctxt "#32382"
+msgid "Speed"
+msgstr "Velocidade"
+
+msgctxt "#32383"
+msgid "Play Files ?"
+msgstr "Reproduzir Arquivos?"
+
+msgctxt "#32389"
+msgid "Disable Standby"
+msgstr "Desativar Standby"
