--- a/resources/language/Vietnamese (Viet Nam)/strings.po
+++ b/resources/language/Vietnamese (Viet Nam)/strings.po
@@ -9,49 +9,25 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
-"Language-Team: Haitian (Haitian Creole) (http://www.transifex.com/projects/p/xbmc-addons/language/ht/)\n"
+"Language-Team: Vietnamese (Viet Nam) (http://www.transifex.com/projects/p/xbmc-addons/language/vi_VN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: ht\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-msgctxt "#32106"
-msgid "Username"
-msgstr "nom itilizateur"
+"Language: vi_VN\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 msgctxt "#32140"
 msgid "Save"
-msgstr "Enregistre"
+msgstr "Lưu"
 
 msgctxt "#32141"
 msgid "Delete"
-msgstr "Efface"
-
-msgctxt "#32212"
-msgid "Cancel"
-msgstr "Anule"
-
-msgctxt "#32303"
-msgid "Next"
-msgstr "Pwochen"
-
-msgctxt "#32334"
-msgid "Yes"
-msgstr "Non"
-
-msgctxt "#32335"
-msgid "No"
-msgstr "Wi"
-
-msgctxt "#32355"
-msgid "Username"
-msgstr "nom itilizateur"
+msgstr "Xóa"
 
 msgctxt "#32356"
 msgid "Password"
-msgstr "mo de pas"
+msgstr "Mật khẩu"
 
 msgctxt "#32382"
 msgid "Speed"
-msgstr "Vites"
+msgstr "Tốc độ"
