--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,5 @@
-2013-12-26 v0.3.9
+2014-01-17 v0.3.9
+  (updated) improve overall gui experience
   (updated) language files from Transifex
 
 2013-12-17 v0.3.8
