--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -71,7 +71,7 @@ msgid "Configure a hostname, keyboard type, perform a reset, update, or backups 
 msgstr ""
 
 msgctxt "#701"
-msgid "Configure network startup options, network mounts, NTP and VPNs"
+msgid "Configure network startup options, NTP and VPNs"
 msgstr ""
 
 msgctxt "#702"
@@ -204,10 +204,6 @@ msgstr ""
 
 msgctxt "#734"
 msgid "Configure the 3rd time (NTP) server"
-msgstr ""
-
-msgctxt "#735"
-msgid "Configure boot-time mounting of a remote filesystem, e.g. NFS or SMB mounts on a remote NAS, without needing autostart.sh hacks."
 msgstr ""
 
 msgctxt "#736"
@@ -1012,46 +1008,6 @@ msgstr ""
 
 msgctxt "#32347"
 msgid "Enable hard drive sleep when idle"
-msgstr ""
-
-msgctxt "#32348"
-msgid "Network Mounts"
-msgstr ""
-
-msgctxt "#32349"
-msgid "Add"
-msgstr ""
-
-msgctxt "#32350"
-msgid "Mount"
-msgstr ""
-
-msgctxt "#32351"
-msgid "Type"
-msgstr ""
-
-msgctxt "#32352"
-msgid "Mount Point"
-msgstr ""
-
-msgctxt "#32353"
-msgid "Server"
-msgstr ""
-
-msgctxt "#32354"
-msgid "Share"
-msgstr ""
-
-msgctxt "#32355"
-msgid "Username"
-msgstr ""
-
-msgctxt "#32356"
-msgid "Password"
-msgstr ""
-
-msgctxt "#32357"
-msgid "Mount Options"
 msgstr ""
 
 msgctxt "#32358"
