--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2014-01-18 v0.3.10
+  (updated) more gui improvements
+
 2014-01-17 v0.3.9
   (updated) improve overall gui experience
   (updated) language files from Transifex
